# sdt

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  meson.build
examples/1/: conf.json  example.sdt
examples/2/: conf.json  example.sdt
src/: Defs.cpp  Defs.hpp  main.cpp  main.hpp
src/XSLGen/: XSLGen.cpp  XSLGen.hpp
src/ast/: AstBuilder.cpp  AstBuilder.hpp  Node.cpp  Node.hpp
src/confReader/: ConfReader.cpp  ConfReader.hpp
src/parser/: Parser.cpp  Parser.hpp
src/pdfGen/: Pages.cpp  Pages.hpp  PdfGen.cpp  PdfGen.hpp
src/utils/: ArgsParser.cpp  ArgsParser.hpp  License.hpp  Out.cpp  Out.hpp  Path.cpp  Path.hpp
